add api to list entries
